fixed flex ex. 02 using justfiy-content: space between in the ul instead of gap

--- a/foundations/flex/02-flex-header/style.css
+++ b/foundations/flex/02-flex-header/style.css
@@ -1,6 +1,9 @@
-.header  {
+.header {
   font-family: monospace;
   background: papayawhip;
+  display: flex;
+  justify-content: space-between;
+  padding: 12px;
 }
 
 .logo {
@@ -11,9 +14,21 @@
   padding: 4px 32px;
 }
 
+.left-links,
+.right-links {
+  display: flex;
+  justify-content: center;
+}
+
 ul {
   /* this removes the dots on the list items*/
   list-style-type: none;
+  margin: 0;
+  display: flex;
+  padding: 0;
+  align-items: center;
+  justify-content: space-between;
+  width: 200px;
 }
 
 a {
